force-app/main/default/objects/Package__mdt/Package__mdt.object-meta.xml
<CustomObject>
    <label>Package</label>
    <pluralLabel>Packages</pluralLabel>
</CustomObject>