force-app/main/default/objects/Package__mdt/fields/Flight_Type__c.field-meta.xml
<CustomField>
    <fullName>Flight_Type__c</fullName>
    <label>Flight Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
                <default>true</default>
                <label>Domestic</label>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Domestic to International</fullName>
            </value>
            <value>
                <fullName>International to Domestic</fullName>
            </value>
            <value>
                <fullName>Domestic to Domestic</fullName>
            </value>
            <value>
                <fullName>International to International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>