force-app/main/default/objects/Package__mdt/fields/Service_Airport__c.field-meta.xml
<CustomField>
    <fullName>Service_Airport__c</fullName>
    <label>Service Airport</label>
    <referenceTo>Service_Airport__mdt</referenceTo>
    <relationshipLabel>Packages</relationshipLabel>
    <relationshipName>Packages</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>