force-app/main/default/objects/Package__mdt/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Departure</fullName>
                <default>true</default>
                <label>Departure</label>
            </value>
            <value>
                <fullName>Arrival</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>